# Network-Routing-Optimization-using-CUDA-Ant-Colony-Optimization

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  err.txt  err_numba.txt  out.txt  requirements.txt  test_cuda.py  test_cuda2.py
backend/app/: main.py  runner.py
compute/: CMakeLists.txt
compute/src/: aco.cu  aco.cuh  graph.h  main.cpp
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AlgorithmExplanation.jsx  Controls.jsx  GraphVisualization.jsx  TopologySelector.jsx
